--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,14 +47,13 @@ add_subdirectory(libs)
 add_subdirectory(umath)
 add_subdirectory(dcdr-common)
 add_subdirectory(dcdr-logger)
-add_subdirectory(dcdr-pathtracer)
+add_subdirectory(dcdr-renderer)
 add_subdirectory(dcdr-worker)
 add_subdirectory(dcdr-worker-cli)
 add_subdirectory(dcdr-transport)
 add_subdirectory(dcdr-interconnect)
 add_subdirectory(dcdr-server)
 add_subdirectory(dcdr-server-cli)
-add_subdirectory(dcdr-webui)
 add_subdirectory(dcdr-gui)
 
 # Tests
