--- a/dcdr-common/CMakeLists.txt
+++ b/dcdr-common/CMakeLists.txt
@@ -9,19 +9,13 @@ set(DCDR_COMMON_INCLUDES
         include/dcdr/utils/ArgsParser.h
         include/dcdr/utils/Timer.h
 
-        include/dcdr/renderer/UnbakedPixel.h
-        include/dcdr/renderer/Chunk.h
-        include/dcdr/renderer/ISampleRenderer.h
-        include/dcdr/renderer/ISPPDistribution.h include/dcdr/Exception.h)
+        include/dcdr/Exception.h)
 
 set(DCDR_COMMON_SOURCES
         src/Constants.cpp
 
         src/utils/Rng.cpp
-        src/utils/ArgsParser.cpp
-
-        src/renderer/UnbakedPixel.cpp
-        src/renderer/Chunk.cpp)
+        src/utils/ArgsParser.cpp)
 
 set(SOURCE_FILES ${DCDR_COMMON_INCLUDES} ${DCDR_COMMON_SOURCES})
 
