--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -27,4 +27,6 @@ endif()
 
 add_subdirectory(nana-git)
 
+add_subdirectory(sqlite-git)
+
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
