[Worker] Implemented SQLite wrapper

--- a/dcdr-worker/CMakeLists.txt
+++ b/dcdr-worker/CMakeLists.txt
@@ -1,14 +1,18 @@
 project(dcdr-worker)
 
 file(GLOB INCLUDES_WORKER include/dcdr/worker/*.h)
+file(GLOB INCLUDES_DATABASE include/dcdr/database/*.h)
 
 set(INCLUDES
-        ${INCLUDES_WORKER})
+        ${INCLUDES_WORKER}
+        ${INCLUDES_DATABASE})
 
-file(GLOB SOURCES_WORKER src/*.cpp)
+file(GLOB SOURCES_WORKER src/worker/*.cpp)
+file(GLOB SOURCES_DATABASE src/database/*.cpp)
 
 set(SOURCES
-        ${SOURCES_WORKER})
+        ${SOURCES_WORKER}
+        ${SOURCES_DATABASE})
 
 include_directories(include)
 include_directories(${sqlite3_SOURCE_DIR})
