--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -8,8 +8,7 @@ else()
     string(REGEX REPLACE "-Werror" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 endif()
 
-#already included by mathfu-git
-#add_subdirectory(gtest-git)
+add_subdirectory(gtest-git)
 add_subdirectory(mongoose)
 add_subdirectory(microtar)
 
